varios cambios en aspecto

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
+   <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100&family=Press+Start+2P&family=Rubik+Mono+One&display=swap"
+      rel="stylesheet">
 
 </head>
 
@@ -81,36 +84,33 @@
                <img class="animate__animated animate__pulse" src="./img/nintendo.png" width="800px"
                   alt="Producto destacado">
             </div>
-            <h3 class="text-pop-up-top">¡Nintendo Switch 10% OFF!</h3>
-            <br>
-            <a class="boton" href="./pages/consolas.html">COMPRAR AHORA</a>
+            <a href="./pages/consolas.html"><img src="./img/comprar.png" width="250px" alt=""></a>
+         </div>
 
 
-            <!-- SUSCRIBIRSE -->
-            <div class="container-1">
-               <div class="suscribir">
-                  <p>Suscribite para recibir novedades</p>
-                  <br>
-                  <a class="boton" href="pages/login.html">SUSCRIBIRME!</a>
-               </div>
-               <div class="presentacion__parrafo">
-                  <p class="welcome">¡Bienvenidos a Galaxy, la tienda de productos gamer!<br>
-                  </p>
-                  <p>Galaxy se enorgullece de ofrecer una amplia selección
-                     de
-                     consolas,
-                     juegos, gadgets y mucho más. <br> Nos apasiona la tecnología y creemos que todos deberían tener
-                     acceso
-                     a
-                     los
-                     últimos
-                     avances y productos innovadores.
-                  </p>
-               </div>
+         <!-- SUSCRIBIRSE -->
+         <div class="container-1">
+
+            <div class="suscribir">
+               <p>Suscribite para obtener 10% de descuento!</p>
+               <a href="pages/login.html"><img src="./img/suscribir.png" alt=""></a>
+
+            </div>
+            <div class="presentacion__parrafo">
+               <p class="welcome">¡Bienvenidos a Galaxy!<br>
+               </p>
+               <p>Nos enorgullese ofrecer una amplia selección
+                  de
+                  consolas,
+                  juegos, gadgets y mucho más. <br> Nos apasiona la tecnología y creemos que todos deberían tener
+                  acceso
+                  a
+                  los
+                  últimos
+                  avances y productos innovadores.
                </p>
             </div>
          </div>
-
 
       </section>
    </main>
@@ -120,6 +120,7 @@
    <section>
       <h2>PRODUCTOS DESTACADOS</h2>
       <div class="productos">
+
          <div class="card">
             <img src="./img/play4-mando.jpg" class="card-img-top" alt="play4-mando">
             <div class="card-body">
