--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -83,14 +83,14 @@
                <p class="animate__animated animate__fadeInUp">Nuestro equipo está formado por apasionados de los
                   videojuegos que comprenden la importancia de
                   encontrar
-                  el equipo adecuado para cada jugador. <br><br>Ya seas un veterano experimentado o un novato curioso,
+                  el equipo adecuado para cada jugador. <br>Ya seas un veterano experimentado o un novato curioso,
                   estamos aquí
-                  para ayudarte a descubrir dispositivos y juegos que se adapten a tu estilo. <br><br>Nos enorgullece
+                  para ayudarte a descubrir dispositivos y juegos que se adapten a tu estilo. <br>Nos enorgullece
                   ofrecer un
                   servicio excepcional, asesoramiento experto y una amplia gama de productos que satisfacen todas las
-                  necesidades de nuestros clientes. <br><br> Mantenemos nuestro catálogo actualizado con las últimas
+                  necesidades de nuestros clientes. <br> Mantenemos nuestro catálogo actualizado con las últimas
                   novedades y
-                  tecnologías para que siempre tengas acceso a las mejores opciones del mercado. <br><br>Si tienes
+                  tecnologías para que siempre tengas acceso a las mejores opciones del mercado. <br>Si tienes
                   preguntas o necesitas asistencia, no dudes en contactar a nuestro equipo de atención al cliente.</p>
             </div>
 
