correccion envio gratis

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
    <div class="varios">
       <ul>
          <li>
-            <a href=""><img src="./img/entrega-gratis.png" alt="entrega-gratis"></a>
+            <img src="./img/entrega-gratis.png" alt="entrega-gratis">
          </li>
          <li>
             <img src="./img/segura.png" alt="compra-segura">
