tiempo de animacion galeria 3s

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -77,17 +77,17 @@
                   alt="mando_play"></div>
             <div class="img_galeria imagen_alta"><img src="../img/mando_xbox.jpg"
                   class="animate__animated animate__fadeInUp" alt="mando_xbox"></div>
-            <div class="img_galeria"><img src="../img/mando_nintendo.jpg" class="animate__animated animate__fadeInRight"
+            <div class="img_galeria"><img src="../img/mando_nintendo.jpg" class="animate__animated animate__fadeInRight animate__slow"
                   alt="mando_nintendo"></div>
-            <div class="img_galeria logos"><img src="../img/play_logo.jpg" class="animate__animated animate__fadeInLeft"
+            <div class="img_galeria logos"><img src="../img/play_logo.jpg" class="animate__animated animate__fadeInLeft animate__slower"
                   alt="play_logo"></div>
-            <div class="img_galeria"><img src="../img/xbox_logo.jpg" class="animate__animated animate__zoomIn"
+            <div class="img_galeria"><img src="../img/xbox_logo.jpg" class="animate__animated animate__zoomIn animate__slower"
                   alt="xbox_logo"></div>
-            <div class="img_galeria"><img src="../img/nintendo_logo.jpg" class="animate__animated animate__fadeInRight"
+            <div class="img_galeria"><img src="../img/nintendo_logo.jpg" class="animate__animated animate__fadeInRight animate__slower"
                   alt="nintendo_logo"></div>
-            <div class="img_galeria"><img src="../img/play_juegos.jpg" class="animate__animated animate__fadeInLeft"
+            <div class="img_galeria"><img src="../img/play_juegos.jpg" class="animate__animated animate__fadeInLeft animate__slower"
                   alt="play_juegos"></div>
-            <div class="img_galeria"><img src="../img/xbox_juegos.jpg" class="animate__animated animate__fadeInDown"
+            <div class="img_galeria"><img src="../img/xbox_juegos.jpg" class="animate__animated animate__fadeInDown animate__slower"
                   alt="xbox_juegos"></div>
             <div class="img_galeria imagen_final"><img src="../img/juegos_nintendo.jpg"
                   class="animate__animated animate__fadeInRight" alt="juegos_nintendo"></div>
