--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -39,8 +39,8 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a id="productos-link" class="nav-link dropdown-toggle" href="productos.html"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+                            <a id="productos-link" class="nav-link dropdown-toggle" href="productos.html" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="consolas.html">Consolas</a></li>
                                 <li><a class="dropdown-item" href="joysticks.html">Joysticks</a></li>
