--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -77,8 +77,7 @@
             <H2>Quienes somos</H2>
          </div>
          <div class="imagen-nosotros">
-            <img class="animate__animated animate__tada" src="../img/nosotros-img.png" width="700px"
-               alt="nosotros">
+            <img class="animate__animated animate__tada" src="../img/nosotros-img.png" width="700px" alt="nosotros">
             <div class="parrafo">
                <p class="animate__animated animate__fadeInUp">Nuestro equipo está formado por apasionados de los
                   videojuegos que comprenden la importancia de
