--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -72,6 +72,8 @@
 
 
    <section>
+      <div class="d-flex flex-column justify-content-center w-100 h-100">
+      </div>
       <div class="nosotros">
          <div class="titulo">
             <H2>Quienes somos</H2>
@@ -87,27 +89,27 @@
                   para ayudarte a descubrir dispositivos y juegos que se adapten a tu estilo. <br>Nos enorgullece
                   ofrecer un
                   servicio excepcional, asesoramiento experto y una amplia gama de productos que satisfacen todas las
-                  necesidades de nuestros clientes. <br> Mantenemos nuestro catálogo actualizado con las últimas
-                  novedades y
-                  tecnologías para que siempre tengas acceso a las mejores opciones del mercado. <br>Si tienes
-                  preguntas o necesitas asistencia, no dudes en contactar a nuestro equipo de atención al cliente.</p>
+                  necesidades de nuestros clientes. Gracias por elegir GalaXY!</p>
             </div>
 
          </div>
       </div>
-      <section class="triangle"></section>
-      <main class="main-productos-abajo">
-         <h2>¿DONDE ESTAMOS?</h2>
+      <div>
+         <section>
+            <section class="triangle"></section>
+            <main class="main-productos-abajo">
+               <h2>¿DONDE ESTAMOS?</h2>
 
-         <div class="mapa">
-            <iframe
-               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1381.8014956297045!2d-58.562529482106314!3d-34.54098640456464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcba05bbf0c2d1%3A0xc403f38bdf4fd791!2sBasquet%20Plaza%20Mitre!5e0!3m2!1ses-419!2sar!4v1688437616841!5m2!1ses-419!2sar"
-               width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-               referrerpolicy="no-referrer-when-downgrade"></iframe>
+               <div class="mapa">
+                  <iframe
+                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1381.8014956297045!2d-58.562529482106314!3d-34.54098640456464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcba05bbf0c2d1%3A0xc403f38bdf4fd791!2sBasquet%20Plaza%20Mitre!5e0!3m2!1ses-419!2sar!4v1688437616841!5m2!1ses-419!2sar"
+                     width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                     referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-         </div>
-         <p>Avenida Pirulo 1484, San Martin. Buenos Aires, Argentina.</p>
-         </div>
+               </div>
+               <p>Avenida Pirulo 1484, San Martin. Buenos Aires, Argentina.</p>
+      </div>
+      </div>
 
    </section>
 
