alt en imagenes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                <img class="animate__animated animate__pulse" src="./img/nintendo.png" width="800px"
                   alt="Producto destacado">
             </div>
-            <a href="./pages/consolas.html"><img src="./img/comprar.png" width="250px" alt=""></a>
+            <a href="./pages/consolas.html"><img src="./img/comprar.png" width="250px" alt="comprar"></a>
          </div>
 
 
@@ -93,7 +93,7 @@
 
             <div class="suscribir">
                <p>Suscribite para obtener 10% de descuento!</p>
-               <a href="pages/login.html"><img src="./img/suscribir.png" alt=""></a>
+               <a href="pages/login.html"><img src="./img/suscribir.png" alt="suscribite"></a>
 
             </div>
             <div class="presentacion__parrafo">
